# aifence

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
blog/: ai-reads-your-env.md
src/aifence/: __init__.py  cli.py  detect.py  patterns.py  scanner.py
src/aifence/generators/: __init__.py  claude.py  copilot.py  cursor.py  gemini.py  ignorefile.py  windsurf.py
src/aifence/prompt_guard/: __init__.py  cli.py  detectors.py  hook.py  installer.py
tests/: test_claude_generator.py  test_cli.py  test_ignorefile.py  test_prompt_guard_cli.py  test_prompt_guard_detectors.py  test_prompt_guard_hook.py  test_prompt_guard_installer.py  test_prompt_guard_rules.py  test_scanner_detect.py  test_stress.py
visuals/: problem-solution.excalidraw
